--- a/modules/control-center-web/src/main/js/package.json
+++ b/modules/control-center-web/src/main/js/package.json
@@ -32,13 +32,13 @@
     "express-session": "^1.11.1",
     "jade": "~1.11.0",
     "lodash": "3.10.1",
-    "mongoose": "^4.1.6",
+    "mongoose": "^4.1.7",
     "mongoose-deep-populate": "2.0.1",
     "nconf": "^0.7.2",
-    "node-sass-middleware": "^0.9.0",
+    "node-sass-middleware": "0.9.0",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "1.2.0",
+    "passport-local-mongoose": "2.0.0",
     "nodemailer": "1.4.0",
     "serve-favicon": "~2.3.0",
     "ws": "~0.8.0"
